Grouped all the button styles

--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,8 @@ a {
 body {
   background-color: #181818;
 }
+@layer components {
+  .btn {
+    @apply rounded-lg border-2 border-white text-white mt-14 p-2 font-bold;
+  }
+}
